<resources>
    <string name="app_name">OTA</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="action_settings">Settings</string>
    <string name="dfu_action_select_file">Select File</string>
    <string name="dfu_action_upload">UPLOAD</string>
    <string name="scanner_title">Select the Device You Want to Update:</string>
    <string name="scanner_empty">No device found</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
    <string name="scanner_subtitle__not_bonded">AVAILABLE DEVICES:</string>
    <string name="dfu_confirmation_dialog_title">Application Uploading</string>
    <string name="dfu_upload_dialog_cancel_message">Are you sure to cancel upload?</string>
    <string name="dfu_feature_title">DFU</string>
    <string name="dfu_settings_title">DFU Settnigs</string>
    <string name="dfu_feature_title_long">Device Firmware Update</string>
    <dimen name="dfu_feature_title_long_margin">-186dp</dimen>
    <string name="dfu_bin_files_created">Bin files were copied to /sdcard/Realsil</string>
    <string name="dfu_bin_new_files_created">New bin files were copied to /sdcard/Realsil</string>
    <string name="dfu_section_application_header">Application</string>
    <string name="dfu_file_name_label">File Name:</string>
    <string name="dfu_file_type_label">File Type:</string>
    <string name="dfu_file_size_label">File Size:</string>
    <string name="dfu_file_old_fw_version_label">Target APP Version:</string>
    <string name="dfu_file_old_patch_version_label">Target Patch Version:</string>
    <string name="dfu_file_new_fw_version_label">File Version:</string>
    <string name="dfu_file_status_label">Status:</string>
    <string name="dfu_file_size_text">%d bytes</string>
    <string name="dfu_file_status_ok">OK</string>
    <string name="dfu_file_status_no_file">File not loaded</string>
    <string name="dfu_file_status_invalid">Invalid file</string>
    <string name="dfu_file_status_invalid_message">Please, select valid BIN file</string>
    <string name="dfu_alert_no_filebrowser_title">File Browser not found</string>
    <string name="no_ble">Device doesn\'t support BLE</string>
    <string name="action_about">About</string>
    <string name="about_title">About</string>
    <string name="normal_font_path">fonts/trebuc.ttf</string>
    <string name="font_path">fonts/trebucbd.ttf</string>
    <string name="about_version">\n\nVersion: %s</string>
    <string name="content_description_splashscreen">Splash screen image</string>
    <string name="progress">%d%%</string>
    <string name="dfu_alert_no_filebrowser_message">File browser application has not been found on your device. Would you like to download one?</string>
    <string-array name="dfu_app_file_browser">
        <item>Drive</item>
        <item>File Manager</item>
        <item>Total Commander</item>
        <item>Search for others</item>
    </string-array>
    <string-array name="dfu_app_file_browser_action">
        <item>market://details?id=com.google.android.apps.docs</item>
        <item>market://details?id=com.rhmsoft.fm</item>
        <item>market://details?id=com.ghisler.android.TotalCommander</item>
        <item>market://search?q=file manager</item>
    </string-array>

    <string name="dfu_section_dfu_header">Device Firmware Update</string>
    <string name="dfu_action_upload_help">\?</string>
    <string name="dfu_action_upload_cancel">Cancel</string>
    <string name="dfu_status_initializing">Initializing&#8230;</string>
    <string name="dfu_status_scanning">Scanning&#8230;</string>
    <string name="dfu_status_connecting">Connecting&#8230;</string>
    <string name="dfu_status_starting">Starting DFU&#8230;</string>
    <string name="dfu_status_uploading">Uploading&#8230;</string>
    <string name="dfu_status_validating">Validating&#8230;</string>
    <string name="dfu_status_disconnecting">Disonnecting&#8230;</string>
    <string name="dfu_status_completed">Done</string>
    <string name="dfu_status_abored">Aborted</string>
    <string name="dfu_status_error">Upload failed</string>
    <string name="dfu_status_connecting_msg">Connecting to %s&#8230;</string>
    <string name="dfu_status_starting_msg">Initializing DFU process&#8230;</string>
    <string name="dfu_status_uploading_msg">Transmitting application to %s&#8230;</string>
    <string name="dfu_status_validating_msg">Validating application&#8230;</string>
    <string name="dfu_status_completed_msg">Application has been send successfully.</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_disconnecting_msg">Disconnecting from %s&#8230;</string>
    <string name="dfu_status_error_msg">DFU process failed.</string>
    <string name="dfu_settings_dfu">DFU options</string>
    <string name="dfu_settings_dfu_packets_receipt_notification_label">Packets receipt notification procedure</string>
    <string name="dfu_settings_dfu_number_of_packets_label">Number of packets</string>
    <string name="dfu_settings_dfu_about">About DFU</string>
    <string name="dfu_settings_dfu_about_summary">DFU documentation on Reasil\'s Developer Zone</string>
    <string name="dfu_uploading_label">Uploading&#8230;</string>
    <string name="dfu_uploading_percentage_label">0%</string>
    <string name="dfu_uploading_percentage">%d%%</string>
    <string name="dfu_default_name">OTA</string>
    <string name="dfu_confirmation_dialog_exit_message">Are you sure to exit?</string>
    <string name="dfu_help_title">Select file</string>
    <string name="dfu_help_message">A file browser application must be installed on the device
        before selecting the BIN file.
        \n\nThere are numbers of applications available on Google Play store, f.e. Total Commander
        or File Manager, that allow you to pick a file from internal memory of the device. To upload
        a file from the Internet you may use f.e. Drive or Dropbox application.
        \n\nYou will be asked to select an application if more than one is installed. A single
        application will be launched automatically.
       </string>

    <string name="dfu_about_text">The Device Firmware Update (DFU) app is compatible with Realsil
        Bee devices that support full LE features. It allows to upload new applications and image
        onto the device over-the-air (OTA).
        \nThe DFU discovers DFU devices, connects to them, and uploads user selected firmware
        applications to the device.
        \n
        \nOTA  version : 2.2.0
        \n2016.2.29
        \nCopyright &#169; 2016 Realsil Corporation. All rights reserved.
    </string>
</resources>
