<!--
 Copyright 2015 Realsil Corporation

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The size of text below must be fixed, therefore dp are used instead of sp -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/feature_horizontal_margin"
        android:layout_marginRight="@dimen/feature_horizontal_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <!-- Application section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/Widget.ListTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dfu_section_application_header" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/feature_section_padding">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dfu_file_name_label"/>

                    <TextView
                        android:id="@+id/file_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:freezesText="true"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dfu_file_size_label"/>

                    <TextView
                        android:id="@+id/file_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:freezesText="true"/>

                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dfu_file_new_fw_version_label"/>

                    <TextView
                        android:id="@+id/newFwVersionTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:freezesText="true"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dfu_file_old_fw_version_label"/>

                    <TextView
                        android:id="@+id/oldFwVersionTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:freezesText="true"/>

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dfu_file_old_patch_version_label"/>

                    <TextView
                        android:id="@+id/oldPatchVersionTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:freezesText="true"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dfu_file_status_label"/>

                    <TextView
                        android:id="@+id/file_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:freezesText="true"
                        android:text="@string/dfu_file_status_no_file"/>
                </TableRow>
            </TableLayout>


            <Button
                android:id="@+id/action_select_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/feature_section_padding"
                android:focusable="true"
                android:enabled="false"
                android:onClick="onSelectFileClicked"
                android:text="@string/dfu_action_select_file"
                android:background="@drawable/button_selector"
                android:layout_gravity="center_horizontal" >
                <requestFocus/>
            </Button>
        </LinearLayout>

        <!-- DFU section -->

        <LinearLayout
            android:id="@+id/dfu_pane"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/backgroundColor"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/Widget.ListTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dfu_section_dfu_header" />

            <Button
                android:id="@+id/action_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/feature_section_padding"
                android:enabled="false"
                android:onClick="onUploadClicked"
                android:background="@drawable/button_selector"
                android:text="@string/dfu_action_upload"/>

            <TextView
                android:id="@+id/textviewUploading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/feature_section_padding"
                android:text="@string/dfu_uploading_label"
                android:visibility="invisible"/>

            <ProgressBar
                android:id="@+id/progressbar_file"
                style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/textviewProgress"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/feature_section_padding"
                android:text="@string/dfu_uploading_percentage_label"
                android:visibility="invisible"
                android:gravity="center" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Select Target"
            android:id="@+id/select_target_button"
            android:onClick="onSelectTargetClicked"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@drawable/button_selector"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select a Device to Update."
            android:id="@+id/select_target_textView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center" />

    </LinearLayout>
</RelativeLayout>